Add 'isConsumerGoods' field to Product Category domain class
Added field 'isConsumerGoods' flag to Product Category model.
Modify JSON API request and response classes regarding to domain
change. Updated database schema along with default evolution.
Fix Swagger.
